Add query range and rps to query bench

--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["es-bench"]
           #args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "manager", "--records", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--index", "{{ .Values.args.index }}", "--bulk-actions", "{{ .Values.args.bulkActions }}", "--flush-interval", "{{ .Values.args.flushInterval }}"]
-          args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "query", "--ns", "{{ .Values.args.ns }}", "--tr", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--in", "{{ .Values.args.index }}", "--trs", "{{ .Values.args.timerange }}"]
+          args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "query", "--ns", "{{ .Values.args.ns }}", "--tr", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--in", "{{ .Values.args.index }}", "--query-range", "{{ .Values.args.range }}", "--rps", "{{ .Values.args.rps }}", "--type", "{{ .Values.args.type }}"]
           #args: ["idle"]
           ports:
             - name: metrics
