--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -32,8 +32,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["es-bench"]
-          #args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "manager", "--records", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--index", "{{ .Values.args.index }}", "--bulk-actions", "{{ .Values.args.bulkActions }}", "--flush-interval", "{{ .Values.args.flushInterval }}"]
-          args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "query", "--ns", "{{ .Values.args.ns }}", "--tr", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--in", "{{ .Values.args.index }}", "--query-range", "{{ .Values.args.range }}", "--rps", "{{ .Values.args.rps }}", "--type", "{{ .Values.args.type }}"]
+          #args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "query", "--ns", "{{ .Values.args.ns }}", "--tr", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--in", "{{ .Values.args.index }}", "--query-range", "{{ .Values.args.range }}", "--rps", "{{ .Values.args.rps }}", "--type", "{{ .Values.args.type }}"]
+          args: ["--env", "production", "--es-password", "{{ .Values.args.esPassword }}", "ingest", "--tr", "{{ .Values.args.records }}", "--pf", "{{ .Values.args.pf }}", "--in", "{{ .Values.args.index }}", "--rps", "{{ .Values.args.rps }}"]
           #args: ["idle"]
           ports:
             - name: metrics
